--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Nystock - Complete Inventory Management Software</title>
+  <title>Nystore - Complete Inventory Management Software</title>
   <script src="https://unpkg.com/lucide@latest"></script>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
@@ -20,7 +20,7 @@
     <nav class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 h-16 flex items-center justify-between">
       <div class="flex items-center space-x-2">
         <i data-lucide="box" class="h-8 w-8 text-blue-900"></i>
-        <span class="text-xl font-bold text-gray-900">Nystock</span>
+        <span class="text-xl font-bold text-gray-900">Nystore</span>
       </div>
       <div class="hidden lg:flex space-x-8">
         <div class="relative group">
@@ -163,9 +163,9 @@
     <div class="py-20 bg-gray-50">
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="text-center mb-16">
-          <h2 class="text-3xl font-bold text-gray-900 mb-4">How Nystock Works</h2>
+          <h2 class="text-3xl font-bold text-gray-900 mb-4">How Nystore Works</h2>
           <p class="text-xl text-gray-600 max-w-3xl mx-auto">
-            Get started with Nystock in three simple steps
+            Get started with Nystore in three simple steps
           </p>
         </div>
         <div class="grid md:grid-cols-3 gap-8">
@@ -214,7 +214,7 @@
             Everything You Need to Manage Your Inventory
           </h2>
           <p class="text-xl text-gray-600 max-w-3xl mx-auto">
-            From purchase orders to sales, from warehouse management to reporting, Nystock has you covered.
+            From purchase orders to sales, from warehouse management to reporting, Nystore has you covered.
           </p>
         </div>
 
@@ -427,7 +427,7 @@
             Seamless Integration with Your Favorite Tools
           </h2>
           <p class="text-xl text-gray-600 max-w-3xl mx-auto">
-            Connect Nystock with your existing business tools for a streamlined workflow.
+            Connect Nystore with your existing business tools for a streamlined workflow.
           </p>
         </div>
 
@@ -533,7 +533,7 @@
             Trusted by Businesses Worldwide
           </h2>
           <p class="text-xl text-gray-600 max-w-3xl mx-auto">
-            See what our customers have to say about Nystock
+            See what our customers have to say about Nystore
           </p>
         </div>
 
@@ -549,7 +549,7 @@
               </div>
             </div>
             <blockquote class="text-gray-600 mb-6">
-              "Nystock has transformed how we manage our inventory. The real-time tracking and analytics have helped us reduce costs significantly."
+              "Nystore has transformed how we manage our inventory. The real-time tracking and analytics have helped us reduce costs significantly."
             </blockquote>
             <div class="flex text-yellow-400 mb-4">
               <i data-lucide="star" class="h-5 w-5 fill-current"></i>
@@ -595,7 +595,7 @@
               </div>
             </div>
             <blockquote class="text-gray-600 mb-6">
-              "The multi-warehouse management feature has been crucial for our expansion. Nystock scales perfectly with our business."
+              "The multi-warehouse management feature has been crucial for our expansion. Nystore scales perfectly with our business."
             </blockquote>
             <div class="flex text-yellow-400 mb-4">
               <i data-lucide="star" class="h-5 w-5 fill-current"></i>
@@ -616,7 +616,7 @@
         <div class="text-center mb-16">
           <h2 class="text-3xl font-bold text-gray-900 mb-4">Frequently Asked Questions</h2>
           <p class="text-xl text-gray-600 max-w-3xl mx-auto">
-            Find answers to common questions about Nystock
+            Find answers to common questions about Nystore
           </p>
         </div>
 
@@ -628,7 +628,7 @@
           
           <div class="bg-white p-6 rounded-xl shadow-lg">
             <h3 class="text-lg font-semibold text-gray-900 mb-4">Can I import my existing inventory?</h3>
-            <p class="text-gray-600">Yes, Nystock supports bulk import from CSV, Excel, and direct integration with popular platforms.</p>
+            <p class="text-gray-600">Yes, Nystore supports bulk import from CSV, Excel, and direct integration with popular platforms.</p>
           </div>
           
           <div class="bg-white p-6 rounded-xl shadow-lg">
@@ -660,7 +660,7 @@
           Ready to Transform Your Inventory Management?
         </h2>
         <p class="text-xl text-blue-100 mb-8 max-w-2xl mx-auto">
-          Join thousands of businesses that trust Nystock. Start your free trial today.
+          Join thousands of businesses that trust Nystore. Start your free trial today.
         </p>
         <div class="flex flex-col sm:flex-row justify-center gap-4">
           <button class="group bg-white text-blue-900 px-8 py-3 rounded-lg hover:bg-blue-50 transition-all hover:shadow-lg transform hover:-translate-y-0.5">
@@ -683,7 +683,7 @@
         <div>
           <div class="flex items-center space-x-2 mb-4">
             <i data-lucide="box" class="h-8 w-8 text-blue-400"></i>
-            <span class="text-xl font-bold text-white">Nystock</span>
+            <span class="text-xl font-bold text-white">Nystore</span>
           </div>
           <p class="text-gray-400 mb-4">
             Modern inventory management software for growing businesses.
@@ -729,7 +729,7 @@
         </div>
       </div>
       <div class="border-t border-gray-800 mt-12 pt-8 flex flex-col md:flex-row justify-between items-center">
-        <p> 2024 Nystock. All rights reserved.</p>
+        <p> 2024 Nystore. All rights reserved.</p>
         <div class="flex space-x-6 mt-4 md:mt-0">
           <a href="#terms" class="hover:text-white transition-colors">Terms</a>
           <a href="#privacy" class="hover:text-white transition-colors">Privacy</a>
