--- a/product.html
+++ b/product.html
@@ -14,27 +14,62 @@
   </div>
 
   <!-- Header -->
+ 
+  <!-- Header with enhanced dropdown animations -->
   <header class="bg-white shadow-sm sticky top-0 z-50">
     <nav class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 h-16 flex items-center justify-between">
       <div class="flex items-center space-x-2">
         <i data-lucide="box" class="h-8 w-8 text-blue-900"></i>
-        <span class="text-xl font-bold text-gray-900">Nystock</span>
+        <span class="text-xl font-bold text-gray-900">Nystore</span>
       </div>
+
+      <!-- Menu Mobile -->
+      <button id="mobile-menu-button" class="lg:hidden text-gray-600 hover:text-gray-900">
+        <i data-lucide="menu" class="h-6 w-6"></i>
+      </button>
+
+      <!-- Menu Desktop -->
       <div class="hidden lg:flex space-x-8">
-        <a href="index.html" class="text-gray-600 hover:text-gray-900">Home</a>
-        <a href="/products.html" class="text-gray-600 hover:text-gray-900">Nos Produits</a>
-        <a href="#features" class="text-gray-600 hover:text-gray-900">Features</a>
+        <div class="relative group">
+          <a href="#features" class="text-gray-600 hover:text-gray-900 flex items-center">
+            Features
+            <i data-lucide="chevron-down" class="h-4 w-4 ml-1"></i>
+          </a>
+          <div class="absolute top-full left-0 mt-2 w-48 bg-white rounded-lg shadow-lg opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all duration-200">
+            <a href="#inventory" class="block px-4 py-2 text-sm text-gray-700 hover:bg-blue-50 hover:text-blue-900">Inventory Management</a>
+            <a href="#orders" class="block px-4 py-2 text-sm text-gray-700 hover:bg-blue-50 hover:text-blue-900">Order Management</a>
+            <a href="#reports" class="block px-4 py-2 text-sm text-gray-700 hover:bg-blue-50 hover:text-blue-900">Reports & Analytics</a>
+          </div>
+        </div>
+        <a href="/products.html" class="text-gray-600 hover:text-gray-900">Publicite</a>
         <a href="#pricing" class="text-gray-600 hover:text-gray-900">Pricing</a>
-        <a href="/product.html" class="text-gray-600 hover:text-gray-900">Publicite</a>
         <a href="#customers" class="text-gray-600 hover:text-gray-900">Customers</a>
       </div>
-      <div class="flex items-center space-x-4">
+
+      <!-- Boutons de droite -->
+      <div class="hidden lg:flex items-center space-x-4">
         <a href="#login" class="text-gray-600 hover:text-gray-900">Login</a>
         <button class="bg-blue-900 text-white px-6 py-2 rounded-lg hover:bg-blue-700 transition-all hover:shadow-lg transform hover:-translate-y-0.5">
           Start Free Trial
         </button>
       </div>
     </nav>
+
+    <!-- Menu Mobile Panel -->
+    <div id="mobile-menu" class="lg:hidden hidden bg-white border-t border-gray-200">
+      <div class="px-4 py-2">
+        <a href="#features" class="block py-2 text-gray-600 hover:text-gray-900">Home</a>
+        <a href="#features" class="block py-2 text-gray-600 hover:text-gray-900">Features</a>
+        <a href="/products.html" class="block py-2 text-gray-600 hover:text-gray-900">Publicite</a>
+        <a href="#pricing" class="block py-2 text-gray-600 hover:text-gray-900">Pricing</a>
+        <a href="#customers" class="block py-2 text-gray-600 hover:text-gray-900">Customers</a>
+        <div class="border-t border-gray-200 my-2"></div>
+        <a href="#login" class="block py-2 text-gray-600 hover:text-gray-900">Login</a>
+        <button class="w-full mt-2 bg-blue-900 text-white px-6 py-2 rounded-lg hover:bg-blue-700 transition-all">
+          Start Free Trial
+        </button>
+      </div>
+    </div>
   </header>
 
   <main>
@@ -219,6 +254,20 @@
   <script>
     // Initialize Lucide icons
     lucide.createIcons();
+    const mobileMenuButton = document.getElementById('mobile-menu-button');
+    const mobileMenu = document.getElementById('mobile-menu');
+
+    mobileMenuButton.addEventListener('click', () => {
+      const isHidden = mobileMenu.classList.contains('hidden');
+      if (isHidden) {
+        mobileMenu.classList.remove('hidden');
+        mobileMenuButton.innerHTML = '<i data-lucide="x" class="h-6 w-6"></i>';
+      } else {
+        mobileMenu.classList.add('hidden');
+        mobileMenuButton.innerHTML = '<i data-lucide="menu" class="h-6 w-6"></i>';
+      }
+      lucide.createIcons();
+    });
   </script>
 </body>
 </html>
